# OSI_labs_3_semester

./: readme.md
CP/: client.c  common.c  common.h  server.c
CP/new/: client.c  common.c  common.h  server.c
CP/old/: CMakeLists.txt  README.md  client.c  common.c  common.h  server.c
CP/task/: CP_OS_v4_2025.odt
lab_01/: CMakeLists.txt  child.c  parent.c
lab_01/report/: OSI_lab1_report_Filippov.odt
lab_02/: CMakeLists.txt  gauss_solver.c  main.c
lab_02/report/: lab_02_report_Filippov.odt
lab_03/: CMakeLists.txt  child.c  main.c  shared_block_t.h
lab_03/report/: OSI_lab3_report_Filippov.odt
lab_04/: CMakeLists.txt  lib.h  lib1.c  lib2.c  program1.c  program2.c
lab_04/report/: OSI_lab4_report_Filippov.docx
lab_05/report/: OSI_lab5_report_Filippov.ott
